@@ -1,4 +1,16 @@
 === 0.4 ===
+2011-05-02  Aki Sasaki  <aki@mozilla.com>
+
+* mozharness/base/log.py (LogMixin.log):
+    Changed to use _log_level_at_least and _print, so we can hide wanted errors during unittest runs.
+
+* mozharness/base/log.py (LogMixin._log_level_at_least): Added method.
+
+* mozharness/base/log.py (LogMixin._print): Added method.
+
+* test/test_base_vcs_mercurial:
+    Ported more tests from build/tools.
+
 2011-04-28  Aki Sasaki  <aki@mozilla.com>
 
 * test/helper_files/init_hgrepo.sh: Added file (copied from build/tools)
